# zwo

./: README.md
0.7.0503/linux_sdk/demo/: Makefile  main_SDK2_video.cpp  main_SDK2_video_hacked.cpp
0.7.0503/linux_sdk/lib/armv5/: libASICamera2.so.0.7.0503
0.7.0503/linux_sdk/lib/armv6/: libASICamera2.so.0.7.0503
0.7.0503/linux_sdk/lib/mac/: libASICamera2.dylib  libASICamera2.dylib.0.7.0503
0.7.0503/linux_sdk/lib/x64/: libASICamera2.so.0.7.0503
0.7.0503/linux_sdk/lib/x86/: libASICamera2.so.0.7.0503
0.7.0503/windows_sdk/: SDK Instruction.txt  change_ASISDK.txt
0.7.0503/windows_sdk/demo/MFC2/: demo.aps  demoDlg.cpp  demoDlg.h  resource.h
0.7.0503/windows_sdk/include/: ASICameraObjectModel2.cs
0.7.0503/windows_sdk/lib/x64/: ASICamera2.lib
1.14.0715/linux_sdk/demo/: Makefile  main_SDK2_video_mac.cpp
1.14.0715/linux_sdk/lib/mac/: libASICamera2.dylib
1.14.0715/windows_sdk/: change_ASISDK.txt
1.14.0715/windows_sdk/lib/x64/: ASICamera2.lib
1.14.1119/linux_sdk/demo/: Makefile
1.14.1119/linux_sdk/lib/mac/: libASICamera2.dylib
1.14.1119/windows_sdk/: change_ASISDK.txt
1.14.1119/windows_sdk/lib/x64/: ASICamera2.lib
1.16.3/linux_sdk/lib/mac/: libASICamera2.dylib
1.16.3/windows_sdk/: change_ASISDK.txt
1.16.3/windows_sdk/lib/x64/: ASICamera2.lib
1.18/linux_sdk/lib/mac/: libASICamera2.dylib
1.18/windows_sdk/: change_ASISDK.txt
1.18/windows_sdk/lib/x64/: ASICamera2.lib
1.18/windows_sdk/lib/x86/: ASICamera2.lib
autogain/: autogain.py
capture/: CMakeLists.txt  LICENSE  Makefile  capture.cpp  write_benchmark.cpp
capture/include/: Frame.h  SERFile.h  agc.h  camera.h  disk.h  preview.h
capture/src/: CMakeLists.txt  Frame.cpp  SERFile.cpp  agc.cpp  camera.cpp  capture.cpp  disk.cpp  preview.cpp
debug/libusb_wrapper/: libusb_wrapper.cpp
debug/libusb_wrapper/example/: Makefile  example.cpp  run_example.sh
linux_sdk/demo/: Makefile  main_SDK2_video_hacked.cpp  simple_video.cpp
linux_sdk/lib/armv7/: libASICamera2.so.0.7.0503
linux_sdk/lib/armv8/: libASICamera2.so.0.7.0503
python/: .gitignore  .pylintrc  README.md  asi.i  asi_test.py  setup.py  video_preview.py
re/classgraph/: libASICamera2-linux32-0.7.0503.txt
re/decompiled-0.7.0503/: CCameraBase_buffers.txt  CCameraFX3.cpp  CCameraS178MC.cpp  CirBuf.cpp  CirBuf.h  Platform.h  WinAPITypes.h
single_shot/: Makefile  single_shot.cpp
windows_sdk/: change_ASISDK.txt
windows_sdk/demo/MFC2/: demo.rc  resource.h
windows_sdk/include/: ASICamera2.h  C#user Read me.txt
windows_sdk/lib/x64/: ASICamera2.lib
windows_sdk/lib/x86/: ASICamera2.lib
zwo_fixer/: CMakeLists.txt  LICENSE  Makefile  internal.hpp  zwo_fixer.cpp  zwo_fixer.hpp
